2006-04-01  Johan Dahlin  <jdahlin@async.com.br>

	* codegen/codegen.py: Mark function, methods and getsets as const.

2006-04-01  Gustavo J. A. M. Carneiro  <gjc@gnome.org>

	* pangocairomodule.c (initpangocairo): Fix compiler warning.

	* m4/python.m4: Fix "underquoted definition of AM_CHECK_PYMOD" warning.

	* gtk/gtk.override (_wrap_gtk_message_dialog_new): On gtk+ 2.9,
	fix constructor to allow subclassing.  Fixes bug #312056.

2006-03-30  Johan Dahlin  <jdahlin@async.com.br>

	* configure.in: Post release version bump

=== PyGTK 2.8.5 ===
2006-03-30  Johan Dahlin  <jdahlin@async.com.br>

	* NEWS: Update.

2006-02-27  Gustavo J. A. M. Carneiro  <gjc@gnome.org>

	* tests/test_dialog.py (MessageDialogTest.testDialogLeak): Add
	test for bug #332771.

	* tests/test_actiongroup.py (ActionGroupTest.timeout_cb): Use
	self.assertEqual instead of plain assert.

	* gtk/gtk.override (gtk_dialog_new_with_buttons): Remove one too
	many g_object_ref.  Fixes Bug 332771: "gtk.Dialog leak".

2006-02-20  Gustavo J. A. M. Carneiro  <gjc@inescporto.pt>

	* gtk/gdkcairo.override: Don't raise an exception if pangocairo
	import fails, since in this case python itself had already raised
	another exception with more information.

2006-02-14  Johan Dahlin  <jdahlin@async.com.br>

	* gtk/gtkclist.override (_wrap_gtk_clist_new_with_titles): Fix typos,
	found by Padraig Brady

2006-02-06  Johan Dahlin  <jdahlin@async.com.br>

	* gtk/__init__.py (_is_pydoc): Do not print the deprecation warning
	if we're running under pydoc.

2006-01-26  Gustavo J. A. M. Carneiro  <gjc@inescporto.pt>

	* examples/pygtk-demo/demos/pixbufs.py (PixbufsDemo.expose_cb):
	Remove the "FIXME: draw_rgb_image_dithalign seems not to be
	available" comment.

	* gtk/gdk.override (_wrap_gdk_draw_rgb_image): Add comment
	explaining why we always call gdk_draw_rgb_image_dithalign instead
	of gdk_draw_rgb_image.
	(_wrap_gdk_draw_gray_image): idem.

2006-01-21  Gustavo J. A. M. Carneiro  <gjc@gnome.org>
