@@ -2774,6 +2774,8 @@ _wrap_gtk_dialog_add_buttons(PyGObject *self, PyObject *args)
     return Py_None;
 }
 %%
+new-constructor GTK_TYPE_MESSAGE_DIALOG
+%%
 override gtk_message_dialog_new kwargs
 static int
 _wrap_gtk_message_dialog_new(PyGObject *self, PyObject *args, PyObject *kwargs)
