@@ -4,6 +4,13 @@
 
 2006-04-01  Gustavo J. A. M. Carneiro  <gjc@gnome.org>
 
+	* gtk/gtk.override (_wrap_gtk_message_dialog_new): Add missing
+	"new-constructor GTK_TYPE_MESSAGE_DIALOG" codegen declaration.
+
+	* codegen/codegen.py: Add support for docstrings in .defs.  To use
+	it, add (docstring "foo bar") to class, function or method
+	definitions.  Fixes bug #322843.
+
 	* pangocairomodule.c (initpangocairo): Fix compiler warning.
 
 	* m4/python.m4: Fix "underquoted definition of AM_CHECK_PYMOD" warning.
